単純化できる処理の修正