@@ -14,7 +14,7 @@ class ValidateNumFormulaTest {
 
     @Test
     void 入力可能文字の検証失敗() {
-        assertEquals(false, ValidateNumFormula.validateInputStr("abcdfghijklmnopqrstuvwxyz@!?"));
+        assertFalse(ValidateNumFormula.validateInputStr("abcdfghijklmnopqrstuvwxyz@!?"));
     }
 
     @Test
@@ -27,11 +27,11 @@ class ValidateNumFormulaTest {
     }
     @Test
     void 括弧の数確認失敗() {
-        assertEquals(false, ValidateNumFormula.checkParentheses("(()"));
+        assertFalse(ValidateNumFormula.checkParentheses("(()"));
     }
     @Test
     void 括弧の入れ子確認失敗() {
-        assertEquals(false, ValidateNumFormula.checkParentheses("())()"));
+        assertFalse(ValidateNumFormula.checkParentheses("())()"));
     }
     @Test
     void 数値チェック成功_整数_複数桁() {
@@ -59,25 +59,25 @@ class ValidateNumFormulaTest {
     }
     @Test
     void 数値チェック失敗() {
-        assertEquals(false, ValidateNumFormula.checkNum("-1.e5"));
+        assertFalse(ValidateNumFormula.checkNum("-1.e5"));
     }
     @Test
     void 数値リストと演算子リストのカウント確認成功() {
         List<String> numList = Arrays.asList("1","2");
-        List<String> formulaList = Arrays.asList("+");
+        List<String> formulaList = List.of("+");
         assertTrue(ValidateNumFormula.checkNumFormulaList(numList,formulaList));
     }
     @Test
     void 数値リストと演算子リストのカウント確認失敗_演算子が多い() {
         List<String> numList = Arrays.asList("1","2");
         List<String> formulaList = Arrays.asList("+","+");
-        assertEquals(false, ValidateNumFormula.checkNumFormulaList(numList,formulaList));
+        assertFalse(ValidateNumFormula.checkNumFormulaList(numList, formulaList));
     }
     @Test
     void 数値リストと演算子リストのカウント確認失敗_数値が多い() {
         List<String> numList = Arrays.asList("1","2","2");
-        List<String> formulaList = Arrays.asList("+");
-        assertEquals(false, ValidateNumFormula.checkNumFormulaList(numList,formulaList));
+        List<String> formulaList = List.of("+");
+        assertFalse(ValidateNumFormula.checkNumFormulaList(numList, formulaList));
     }
     @Test
     void 数値配列一番目の判定_数値_成功() {
@@ -89,7 +89,7 @@ class ValidateNumFormulaTest {
     }
     @Test
     void 数値配列一番目の判定_失敗() {
-        assertEquals(false, ValidateNumFormula.checkCharFirstNumber('E'));
+        assertFalse(ValidateNumFormula.checkCharFirstNumber('E'));
     }
     @Test
     void 数値配列二番目以降の判定_成功() {
@@ -97,7 +97,7 @@ class ValidateNumFormulaTest {
     }
     @Test
     void 数値配列二番目以降の判定_失敗() {
-        assertEquals(false, ValidateNumFormula.checkCharLoopNumber('a'));
+        assertFalse(ValidateNumFormula.checkCharLoopNumber('a'));
     }
     @Test
     void 関数配列一番目以降の判定_成功() {
@@ -105,7 +105,7 @@ class ValidateNumFormulaTest {
     }
     @Test
     void 関数配列一番目以降の判定_失敗() {
-        assertEquals(false, ValidateNumFormula.checkCharFirstFunction('S'));
+        assertFalse(ValidateNumFormula.checkCharFirstFunction('S'));
     }
     @Test
     void 関数配列二番目以降の判定_成功() {
@@ -113,6 +113,6 @@ class ValidateNumFormulaTest {
     }
     @Test
     void 数値配列一番目以降の判定_失敗() {
-        assertEquals(false, ValidateNumFormula.checkCharLoopFunction("wwwwwww"));
+        assertFalse(ValidateNumFormula.checkCharLoopFunction("wwwwwww"));
     }
 }
